fix gap in footer menu

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -17,7 +17,7 @@
   gap: 220px;
   position: relative;
   @media screen and (max-width: $width-xl) {
-    gap: 160px;
+    gap: 100px;
   }
   @media screen and (max-width: $width-l) {
     padding-bottom: 42px;
